Добавил ссылку на картинку для фильма и обновил тесты и доки
