# backend/docs/openapi.json
@@ -27,6 +27,7 @@
                 "director": "Кристофер Нолан",
                 "duration": 10800,
                 "description": "История американского физика Роберта Оппенгеймера",
+                "image_url": "/static/images/oppenheimer.svg",
                 "genre_ids": [1, 3],
                 "age_rating": 18,
                 "release_date": "2024-12-01T00:00:00Z"
@@ -259,6 +260,9 @@
             "format": "int64"
           },
           "description": {
+            "type": "string"
+          },
+          "image_url": {
             "type": "string"
           },
           "genre_ids": {
